<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DHIS Messenger</string>
    <string name="action_settings">Settings</string>
    <string name="dhis">dhis2</string>
    <string name="signin">Sign in</string>
    <string name="introSignin">Loading..</string>
    <string name="autoSignin">Auto sign in</string>
    <string name="server">Server</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="messenger">messenger</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="phonenumber">Phone number</string>
    <string name="firstname">First name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="jobTitle">Job title</string>
    <string name="education">Education</string>
    <string name="employer">Employer</string>
    <string name="birthday">Birthday</string>
    <string name="nationality">Nationality</string>
    <string name="interests">Interests</string>
    <string name="languages">Languages</string>
    <string name="recipients">Recipients</string>
    <string name="subject">Subject</string>
    <string name="msg">Message</string>
    <string name="hintToUsers">Type in users only..</string>
    <string name="hintSubject">Subject..</string>
    <string name="hintMessage">Message..</string>
    <string name="interpretationPicture">Interpretation Picture</string>
    <string name="message">Write a message..</string>
    <string name="send">Send</string>
    <string name="online">Online</string>
    <string name="notConnected">Not connected</string>
    <string name="info">Info</string>
    <string name="members">Conversation members</string>


    <string-array name="view_array">
        <item>Messages</item>
        <item>Chat</item>
        <item>Interpretations</item>
        <item>Profile</item>
        <item>Stats</item>
        <item>Sign out</item>
    </string-array>

    <string-array name="server_array">
        <item>https://88.80.187.109/dhis</item>
        <item>http://10.0.0.14:8082/</item>
        <item>http://inf5750-chat.uio.no/</item>
        <item>https://play.dhis2.org/demo/</item>
        <item>https://apps.dhis2.org/demo</item>
        <item>http://hmis2.health.go.ug</item>
        <item>http://www.hispmalawi.org.mw/dhis</item>
        <item>https://www.ghsdhims.org/dhims</item>
        <item>https://hmis.moh.gov.rw/hmis</item>
        <item>https://197.243.37.125/hmis</item>
        <item>http://burkina.dhis2.org/dhis</item>
        <item>http://liberia.dhis2.org/dhis</item>
        <item>http://dhis.moh.go.tz</item>
        <item>http://hmis.gov.gm/dhis</item>
        <item>http://hmis.dhis.co.zm/dhis</item>
        <item>http://dhis.mohcc.gov.zw</item>
    </string-array>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="action_new">New Message</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>


</resources>