<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFCAC2">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:padding="5dp">

            <TextView
                android:id="@+id/en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Org. Units"
                android:textStyle="bold" />

            <org.dhis2.messaging.Utils.UserInterface.MulitAutoCompleteRecipients
                android:id="@+id/orgunits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/en"
                android:background="#FFFFFF"
                android:completionThreshold="1"
                android:dropDownVerticalOffset="5dp"
                android:dropDownWidth="wrap_content"
                android:ems="20"
                android:hint="Type in organisation units.."
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete|textAutoCorrect|textMultiLine"
                android:padding="2dp"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.4dp"
                android:layout_below="@id/orgunits"
                android:background="#1d5288" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relen"
            android:background="#FFFFFF"
            android:padding="5dp">

            <TextView
                android:id="@+id/to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipients"
                android:textStyle="bold" />

            <org.dhis2.messaging.Utils.UserInterface.MulitAutoCompleteRecipients
                android:id="@+id/recipients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/to"
                android:background="#FFFFFF"
                android:completionThreshold="1"
                android:dropDownVerticalOffset="5dp"
                android:dropDownWidth="wrap_content"
                android:ems="20"
                android:hint="@string/hintToUsers"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete|textAutoCorrect|textMultiLine"
                android:padding="2dp"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.4dp"
                android:layout_below="@id/recipients"
                android:background="#1d5288" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/reltre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relto"
            android:background="#FFFFFF"
            android:padding="5dp">

            <TextView
                android:id="@+id/tre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subject"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tre"
                android:background="#FFFFFF"
                android:hint="@string/hintSubject"
                android:imeOptions="actionNext"
                android:inputType="textEmailSubject"
                android:padding="2dp"
                android:singleLine="true"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.4dp"
                android:layout_below="@id/subject"
                android:background="#1d5288" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reltre"
            android:background="#FFFFFF"
            android:padding="5dp">

            <TextView
                android:id="@+id/fire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fire"
                android:background="#FFFFFF"
                android:gravity="top|left"
                android:hint="@string/hintMessage"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:padding="2dp"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.4dp"
                android:layout_below="@id/content"
                android:background="#1d5288" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>